[ADD] Swagger for CRUD users
